--- a/src/pug/_footer.pug
+++ b/src/pug/_footer.pug
@@ -49,7 +49,7 @@ footer.jumbobox
           .col-xs-1
             .up-arrow
               a.animated-scroll(href="#top", title="Наверх")
-                i.fas.fa-2.fa-chevron-circle-up.text-white
+                i.fas.fa-2.fa-chevron-circle-up.fa-2x.text-white
     .footer-bottom
       .row
         .col-xs-12.col-md-6
