--- a/src/pug/_header.pug
+++ b/src/pug/_header.pug
@@ -105,5 +105,5 @@ header
                     li
                       a(href="https://new.razvitum.ru/contacts") Контакты
                 .col-md-1
-                  a.rs-btn.fa-2x(type="button")
+                  a.rs-btn.fa-2x.hidden-xs(type="button")
                     span.far.fa-eye
