--- a/src/scss/_main.sass
+++ b/src/scss/_main.sass
@@ -590,7 +590,7 @@ footer
     display: block
     position: absolute
     top: 0
-    right: 0
+    right: 28px
 
   .footer_nav .up-arrow a
     transition: opacity 0.3s
