--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -47,6 +47,7 @@ html(class='no-js', lang='ru')
       script(src='/js/jquery-3.4.1.min.js')
       script(src='/js/bootstrap.js')
       //- script(src='/js/all.js')
-      script(src='/js/vendors.min.js')
-      //- script(src='/js/script.min.js')
+      //- script(src='/js/vendor.min.js')
+      script(src='/js/front.min.js')
+      script(src='/js/script.min.js')
       block script
