--- a/src/scss/blocks/article.sass
+++ b/src/scss/blocks/article.sass
@@ -1,5 +1,7 @@
 @import '../fonts'
 @import '../vars'
+@import '../spritePNG'
+@import '../mixins/calc'
 @import '../mixins/styles'
 
 .article
@@ -23,9 +25,14 @@
       color: $lightgray
       cursor: pointer
   &__title
-    +title
+    margin-top: 28px
+    margin-bottom: 44px
+    +ff-arial
+    font-size: 2.25em
+    text-align: left
   &__text
     +text-basic
+    text-align: left
 
   &-interest
     &__title
@@ -68,3 +75,65 @@
     justify-content: center
     font-size: 1em
     color: $lightgray
+  &__btn
+    padding-left: 30px
+    padding-top: 9px
+    background-color: #fff
+    border: 1px solid  $accent
+    color: $accent
+    font-size: 1em
+    i
+      top: 5px
+      position: relative
+      padding-right: 7px
+    &:hover
+      background-color: $accent
+      color: #fff
+  &__form-wrap
+    display: flex
+    flex-direction: row
+    justify-content: center
+    flex-wrap: wrap
+    margin: 25px 0
+  &__email-input
+    margin: 0 25px
+    padding: 10px 25px
+    width: 360px
+    max-width: 360px
+  &__social
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    flex-wrap: wrap
+    margin-top: 75px
+    margin-bottom: 50px
+
+.check-list
+  margin-top: 400px
+  padding: 0 54px
+  position: relative
+  &:before
+    +psblock(block, absolute)
+    +sprite($sheet)
+    top: 0
+    left: 0
+  h4
+    margin: 0
+    padding: 0
+    +ff-arial
+    font-style: italic
+    font-size: 1em
+    line-height: 1.5em
+    color: $headgray
+    text-align: left
+  p
+    margin: 0
+    padding: 0
+    font-style: italic
+    font-size: 1em
+    line-height: 1.5em
+    color: $headgray
+    text-align: left
+  &__controls
+    color: #999
+    font-size: 1em
