--- a/src/scss/mixins/_calc.scss
+++ b/src/scss/mixins/_calc.scss
@@ -49,5 +49,14 @@
 
   &:checked + label:before {
     content: '\f058';
+    animation: effect .25s ease-in;
+    animation-duration: 0.25s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: none;
+    animation-play-state: running;
+    animation-name: effect;
   }
 }
