Стилизовал study до формы

--- a/src/pages/study.pug
+++ b/src/pages/study.pug
@@ -107,6 +107,50 @@ block content
       .col-xs-12
         h2.study__title Кэшбэк «Просто накопить»!
         p.study__text Совершая своевременные действия при оформлении заявки и в период обучения, #[br]Вы получаете рубли на счет в личном кабинете. #[br]Используйте их на свое дальнейшее обучение до 50% от стоимости программ
+    .row.study-cashback__group
+      .col-xs-12.col-md-3.col-sm-6
+        .study-cashback__item
+          .study-cashback__item-num 1
+          .study-cashback__item-text Регистрируетесь#[br]на сайте razvitum.ru
+          .study-cashback__item-ellipse.hidden-md.hidden-xs.hidden-sm
+      .col-xs-12.col-md-3.col-sm-6
+        .study-cashback__item
+          .study-cashback__item-num 2
+          .study-cashback__item-text Совершаете#[br]своевременные#[br]действия 
+          .study-cashback__item-ellipse.study-cashback__item-ellipse--rotated.hidden-md.hidden-xs.hidden-sm
+      .col-xs-12.col-md-3.col-sm-6
+        .study-cashback__item
+          .study-cashback__item-num 3
+          .study-cashback__item-text Получаете кэшбэк#[br]автоматически на свой счет#[br]в личном кабинете
+          .study-cashback__item-ellipse.hidden-md.hidden-xs.hidden-sm
+      .col-xs-12.col-md-3.col-sm-6
+        .study-cashback__item
+          .study-cashback__item-num 4
+          .study-cashback__item-text Оплачивайте до 50%#[br]от стоимости программ
+
+  .container.study-cashback__details-wrap
+    .row
+      .col-xs-12.col-md-5.study-cashback__subtitle Обучайтесь#[br]и возвращайте #[span + 2 000]
+      .col-xs-12.col-md-7.study-cashback__details-group
+        .study-cashback__detail
+          .study-cashback__detail-sum + 300
+          .study-cashback__detail-text Подача документов#[br]до 3-х дней
+        .study-cashback__detail
+          .study-cashback__detail-sum + 500
+          .study-cashback__detail-text Оплата обучения#[br]до 5-и дней
+        .study-cashback__detail
+          .study-cashback__detail-sum + 500
+          .study-cashback__detail-text Успешная аттестация
+        .study-cashback__detail
+          .study-cashback__detail-sum + 500
+          .study-cashback__detail-text С Днем Рождения!
+        .study-cashback__detail
+          .study-cashback__detail-sum + #[span ∞]
+          .study-cashback__detail-text Секретные акции
+        .study-cashback__detail
+          .study-cashback__detail-img
+            img(src="/img/money.png", alt="")
+
 //- 1.  Регистрируетесь  на сайте razvitum.ru
 //- 2.  Совершаете своевременные действия
 //- 3.  Получаете кэшбэк автоматически на свой счет в личном кабинете
