--- a/src/scss/blocks/study.sass
+++ b/src/scss/blocks/study.sass
@@ -98,6 +98,8 @@
       color: #fff
       font-size: 3em
       line-height: 1.1em
+      @media(max-width: 480px)
+        font-size: 2.5em
     .study__text
       margin-bottom: 60px
       color: #fff
@@ -172,6 +174,8 @@
       min-width: 33%
       padding-right: 20px
       margin-bottom: 40px
+      margin-left: auto
+      margin-right: auto
       min-height: 120px
       &-sum
         font-size: 3em
@@ -194,12 +198,92 @@
       &-text
         color: $headgray
       &-img
-        position: absolute
-        left: 0
-        bottom: 0
         height: 160px
         width: 100%
+        transform: translateY(-30px);
         img
           height: 100%
           max-height: 160px
           width: auto
+
+  &-offer
+    margin-top: 150px
+    margin-bottom: 150px
+    &__wrap
+      margin-top: 75px
+    &__text
+      margin-bottom: 10px
+      font-size: 1em
+      color: $headgray
+    &__button
+      margin-left: 20px
+      margin-bottom: 30px
+    // 
+    // стилизация input загрузки файла
+    // по умолчанию нельзя менять внешний вид — приходится шаманство разводить с подменой элементов
+    &__form
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+    &__form-wrap
+      display: flex
+      flex-direction: row
+      flex-wrap: nowrap
+      align-items: center
+      position: relative
+      width: 100%
+      max-width: 480px
+      min-width: 320px
+      height: 54px
+      margin-right: 30px
+      padding-left: 65px 
+      margin-bottom: 20px
+      border-radius: 100px
+      border: 1px solid #bcbcbc
+    &__input-ico
+      position: absolute
+      top: 12px
+      left: 22px
+      color: $accent
+    &__input-info
+      display: inline-block
+      flex-grow: 7
+      padding-right: 10px
+      font-size: 1em
+      font-weight: 400
+      color: #bcbcbc
+      overflow: hidden
+      white-space: nowrap;
+      text-overflow: ellipse
+    &__input-file
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    &__input-file-btn
+      display: inline-block
+      flex-grow: 1
+      margin: 0
+      padding: 12px 32px
+      border-radius: 100px
+      background-color: #f6f6f6
+      text-align: center
+      font-size: 1em
+      font-weight: 400
+      color: #bcbcbc
+      border: 1px solid #bcbcbc
+      cursor: pointer
+      &:hover
+        background-color: $light-blue
+        color: #fff
+      &:focus
+        outline: 1px dotted #000
+        outline: -webkit-focus-ring-color auto 5px
+    &__form-button
+      background-color: $orange
+      font-size: 1em
+      color: #000
+
+    
