--- a/src/scss/blocks/study.sass
+++ b/src/scss/blocks/study.sass
@@ -99,7 +99,7 @@
       font-size: 3em
       line-height: 1.1em
       @media(max-width: 480px)
-        font-size: 2.5em
+        font-size: 2.25em
     .study__text
       margin-bottom: 60px
       color: #fff
@@ -152,6 +152,8 @@
       font-size: 3em
       line-height: 1.4em
       color: $headgray
+      @media(max-width: 480px)
+        font-size: 2.25em
       & span
         display: block
         +ff-roboto-bold
@@ -225,6 +227,7 @@
       display: flex
       flex-direction: row
       flex-wrap: wrap
+      align-items: flex-start
     &__form-wrap
       display: flex
       flex-direction: row
@@ -233,7 +236,7 @@
       position: relative
       width: 100%
       max-width: 480px
-      min-width: 320px
+      min-width: 240px
       height: 54px
       margin-right: 30px
       padding-left: 65px 
@@ -282,8 +285,7 @@
         outline: 1px dotted #000
         outline: -webkit-focus-ring-color auto 5px
     &__form-button
+      // padding: 12px 32px
       background-color: $orange
       font-size: 1em
       color: #000
-
-    
